google markers finished

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,6 +55,12 @@
 							<p> <li>\{{name}}</li>
 								\{{contact.formattedPhone}}<br>
 								\{{location.formattedAddress}}<br>
+								<div id="lat">
+								\{{location.lat}}<br>
+								</div>
+								<div id="lng">
+								\{{location.lng}}<br>
+								</div>
 								<a href=\{{url}}>\{{url}}</a>
 								\{{/each}}
 							</script>
