--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,10 +38,10 @@
 					<div id="form">
 						<form id="search" method="get">
 							<div class="form-group">
-								<input type="text" class="form-control" id="location-city" placeholder="search location">
+								<input type="text" class="form-control" id="location-city" placeholder="search by city">
 							</div>
-							<div class="form-group">
-								<input type="submit" value="submit" class="btn btn-primary">
+							<div class="form-group2">
+								<input type="submit" value="I'm thirsty!" class="btn btn-primary">
 							</div>
 						</form>
 					</div>
@@ -55,13 +55,9 @@
 							<p> <li>\{{name}}</li>
 								\{{contact.formattedPhone}}<br>
 								\{{location.formattedAddress}}<br>
-								<div id="lat">
-								\{{location.lat}}<br>
-								</div>
-								<div id="lng">
-								\{{location.lng}}<br>
-								</div>
 								<a href=\{{url}}>\{{url}}</a>
+								<br>
+								<hr>
 								\{{/each}}
 							</script>
 						</ol>
