--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,7 +30,56 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<h1> Hi {{user.username}}!</h1>
+<h1>brewMe</h1>
+<p>Hi {{user.username}}!</p>
+
+
+
+<div id="form">
+            <form id="search" method="get">
+              <div class="form-group">
+                <input type="text" class="form-control" id="location-city" placeholder="search location">
+              </div>
+              <div class="form-group">
+                <input type="submit" value="submit" class="btn btn-primary">
+              </div>
+            </form>
+          </div>
+          
+          
+          
+          <div id="container">
+            <ol id="breweries-list">
+              <script id="breweries-template" type="text/x-handlebars-template">
+              \{{#each posts}}
+              <p> <li>\{{name}}</li>
+                \{{contact.formattedPhone}}<br>
+                \{{location.formattedAddress}}<br>
+                <div id="lat">
+                \{{location.lat}}<br>
+                </div>
+                <div id="lng">
+                \{{location.lng}}<br>
+                </div>
+                <a href=\{{url}}>\{{url}}</a>
+                \{{/each}}
+              </script>
+            </ol>
+          </div>
+          
+          
+          
+          
+         <div id="map"></div>
+   
+          
+          
+          
+          
+          <br><br><br><br><br><br><br><br><br>
+          
+          
+          
 
 		
 
@@ -44,8 +93,8 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script>
-		<script src="/path/to/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsOlaf2AxScK_j8MBNaP8jMMLj0dEQ0eI&callback=initMap">
+          </script>
 		<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
