--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -39,5 +39,9 @@
 				<input type="submit" class="btn btn-block btn-primary" value="Sign Up">
 			</div>
 		</form>
+		 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
+		 <script type="text/javascript" src="script/validations.js"></script>
 	</body>
 </html>
