--- a/views/login.hbs
+++ b/views/login.hbs
@@ -30,6 +30,7 @@
 
 <h1>Log In</h1>
 <br>
+<div id="login">
 <form method="POST" action="/login">
   <div class="form-group">
     <input type="text" name="username" class="form-control" placeholder="Username" autofocus>
@@ -41,6 +42,7 @@
     <input type="submit" class="btn btn-block btn-primary" value="Log In">
   </div>
 </form>
+</div>
 
 
 
