--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,7 @@
 body {
-	background-image: url("old_map.png");
+	
+
+
 }
 
 #breweries-list {
@@ -63,5 +65,15 @@ label.error {
 }
 #login {
 	margin-left: 480px;
+}
+#header {
+	
+	background-image: url("https://images.unsplash.com/photo-1431538510849-b719825bf08b?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=c46d8fdc94d8f2b6a60b48aa13c3fd90");
+	background-size: cover;
+	height: 1800px;
+	margin-top: -20px;
+}
+#container {
+	position: relative;
 }
 
