--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,7 +37,7 @@
 						</div><!-- /.navbar-collapse -->
 						</div><!-- /.container-fluid -->
 					</nav>
-					
+					<div id="header">
 					<h1>brewMe</h1>
 					<div id="form">
 						<form id="search" method="get">
@@ -49,6 +49,15 @@
 							</div>
 						</form>
 					</div>
+					<div id="map"></div>
+					</div>
+
+
+
+
+
+
+
 					<div id="container">
 						<ol id="breweries-list">
 							<script id="breweries-template" type="text/x-handlebars-template">
@@ -74,7 +83,7 @@
 				
 				
 				
-				<div id="map"></div>
+				
 				<!-- <div id="form_add">
 						<form id="add">
 								<input type="submit" value="add" class="btn btn-primary">
@@ -85,7 +94,7 @@
 				
 				
 				
-				<br><br><br><br><br><br><br><br><br>
+				
 				
 				
 				
