--- a/public/main.css
+++ b/public/main.css
@@ -1,26 +1,22 @@
-body {
-	
-
-
-}
-
 #breweries-list {
 	font-size: 15px;
-	color: grey;
-	padding-top: 300px;
+	color: #2697E8;
+	padding-top: 560px;
 	padding-right: 70px;
 }
 #map { 
 	position: absolute; 
-	top:188px; 
+	top:178px; 
 	bottom:200px; 
-	width:40%; 
+	width:50%; 
 	left: 700px;
+	height: 50%;
 }
 h1 {
 	text-align: center;
 	font-family: 'Lobster', cursive;
-	font-size: 25px;
+	font-size: 35px;
+	color: #2697E8;
 }
 .form-group {
 	margin-left: 100px;
@@ -51,8 +47,8 @@ h1 {
 	margin: 0 auto;
 	width: 70%;
 	padding-top: 150px;
-	color: grey;
-	font-size: 15px;
+	color: #2697E8;
+	font-size: 20px;
 	text-align: center;
 	
 }
@@ -70,10 +66,14 @@ label.error {
 	
 	background-image: url("https://images.unsplash.com/photo-1431538510849-b719825bf08b?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=c46d8fdc94d8f2b6a60b48aa13c3fd90");
 	background-size: cover;
-	height: 1800px;
+	height: 720px;
 	margin-top: -20px;
 }
-#container {
-	position: relative;
+#results2 {
+	
+	font-size: 25px;
+	padding-left: 200px;
+	color:#2697E8;;
 }
+
 
