--- a/views/login.hbs
+++ b/views/login.hbs
@@ -27,9 +27,11 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div id="header">
 
 <h1>Log In</h1>
 <br>
+
 <div id="login">
 <form method="POST" action="/login">
   <div class="form-group">
@@ -42,6 +44,7 @@
     <input type="submit" class="btn btn-block btn-primary" value="Log In">
   </div>
 </form>
+</div>
 </div>
 
 
