--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -26,6 +26,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div id="header">
 	<h1>Sign Up</h1>
 		<br>
 		<div id="signup">
@@ -45,6 +46,7 @@
 		</form>
 		 </div>
 		 {{errorMessage}}
+		 </div>
 
 
 
